[tool.poetry]
name = "fastapi-neon"
version = "0.1.0"
description = ""
authors = ["maaazahmed <maazahmeed2k16@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
sqlmodel = "^0.0.16"
psycopg = {extras = ["binary"], version = "^3.1.18"}
python-jose = "^3.3.0"
passlib = "^1.7.4"
types-python-jose = "^3.3.4.20240106"


[tool.poetry.group.dev.dependencies]
types-passlib = "^1.7.7.20240106"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
